--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "devDependencies": {
     "prettier": "^3.0.3",
-    "vitepress": "^1.0.0-rc.10",
+    "vitepress": "1.0.0-rc.10",
+    "vitepress-plugin-tabs": "^0.3.0",
     "vue": "^3.3.4"
   },
   "engines": {
