Fix last update date, update bus.md.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -64,6 +64,8 @@ jobs:
     steps:
       - name: 🛎️ Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: ⚙️ Setup pnpm
         uses: pnpm/action-setup@v2
@@ -77,8 +79,13 @@ jobs:
           cache: pnpm
           node-version: ${{ matrix.node }}
 
+      - name: ⚙️ Setup Pages
+        uses: actions/configure-pages@v3
+
       - name: 📦 Install dependencies
-        run: pnpm i --frozen-lockfile --color=always
+        env:
+          PNPM_FLAGS: --frozen-lockfile --color=always
+        run: pnpm i ${{ env.PNPM_FLAGS }}
 
       - name: 🏗 Build site with VitePress
         run: pnpm notes:build
