--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,14 +4,16 @@ updates:
     directory: /
     schedule:
       interval: monthly
+    groups:
+      actions-dependencies:
+        patterns:
+          - '*'
 
   - package-ecosystem: npm
     directory: /
     schedule:
       interval: monthly
     groups:
-      dependencies:
-        dependency-type: development
-        update-types:
-          - minor
-          - patch
+      pnpm-dependencies:
+        patterns:
+          - '*'
