--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,4 +73,4 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           name: artifact
-          path: artifact
+          path: ./dist
