--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,9 +5,7 @@ on:
     workflows: ['CI']
     types:
       - completed
-    branches:
-      - gh-pages
-      - feature/ci
+    branches: ['gh-pages', 'feature/ci']
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
