--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,10 +2,13 @@ name: CD
 
 on:
   workflow_run:
-    workflows: ['CI']
+    workflows:
+      - CI
     types:
       - completed
-    branches: ['gh-pages', 'feature/ci']
+    branches:
+      - gh-pages
+      - feature/ci
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
