--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Wait
-        run: sleep 60
+        run: sleep 1
   download-latest:
     runs-on: ubuntu-latest
     needs: wait
@@ -42,7 +42,7 @@ jobs:
           name: artifact
           path: ./dist
       - name: Test
-        run: cat artifact/sha | grep $GITHUB_SHA
+        run: ls; cd dist; ls;
 #  cleanup:
 #    name: 🧹 Clean up GitHub repository
 #
