--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Download
-        uses: ./
+        uses: ./dist
         with:
           workflow: ci.yml
           name: artifact
