--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: ci
 
 on:
   push:
@@ -72,5 +72,5 @@ jobs:
       - name: 📤 Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          name: artifact
+          name: dist
           path: ./dist
