--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -61,8 +61,8 @@ jobs:
       - name: Unzip artifacts
         run: |
           rm -rf ./dist
-          unzip artifacts.zip
-          rm -f artifacts.zip
+          tar -xvf artifacts.tar
+          rm -f artifacts.tar
 
       - name: 🚀 Deploy to GitHub Pages
         id: deployment
