--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -58,11 +58,18 @@ jobs:
           name: dist
           path: ./
 
-      - name: Unzip artifacts
-        run: |
-          rm -rf ./dist
-          tar -xvf artifacts.tar
-          rm -f artifacts.tar
+#      - name: Unzip artifacts
+#        run: |
+#          rm -rf ./dist
+#          tar -xvf artifacts.tar
+#          rm -f artifacts.tar
+
+      - name: ⚙️ Setup Pages
+        uses: actions/configure-pages@v3
+
+      - uses: actions/upload-pages-artifact@v2
+        with:
+          path: ./
 
       - name: 🚀 Deploy to GitHub Pages
         id: deployment
