--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,19 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  cleanup:
+    name: 🧹 Clean up GitHub repository
+    runs-on: ubuntu-latest
+    permissions: write-all
+
+    steps:
+      - name: 🗑 Delete workflow runs
+        uses: dmvict/clean-workflow-runs@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          save_period: 7
+          save_min_runs_number: 0
+
   lint:
     name: 🪄 Lint
     runs-on: ubuntu-latest
