--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -50,7 +50,7 @@ jobs:
       - name: 🛎️ Checkout
         uses: actions/checkout@v4
 
-      - name: Download artifacts
+      - name: 📥 Download artifacts
         uses: dawidd6/action-download-artifact@v2
         with:
           workflow: ci.yml
@@ -58,16 +58,11 @@ jobs:
           name: dist
           path: ./
 
-#      - name: Unzip artifacts
-#        run: |
-#          rm -rf ./dist
-#          tar -xvf artifacts.tar
-#          rm -f artifacts.tar
-
       - name: ⚙️ Setup Pages
         uses: actions/configure-pages@v3
 
-      - uses: actions/upload-pages-artifact@v2
+      - name: 📥 Upload artifact
+        uses: actions/upload-pages-artifact@v2
         with:
           path: ./
 
