--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,15 @@ on:
   push:
     branches:
       - gh-pages
+    paths-ignore:
+      - README.md
+      - LICENSE.md
   pull_request:
     branches:
       - gh-pages
+    paths-ignore:
+      - README.md
+      - LICENSE.md
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
