--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier": "^3.1.0",
     "vitepress": "1.0.0-rc.31",
     "vitepress-plugin-back-to-top": "^1.0.1",
+    "vitepress-plugin-google-analytics": "^1.0.2",
     "vitepress-plugin-tabs": "^0.5.0",
     "vue": "^3.3.10"
   },
