--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -50,22 +50,22 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 📥 Download artifacts
-        uses: dawidd6/action-download-artifact@v2
+        uses: dawidd6/action-download-artifact@v3
         with:
           workflow: ci.yml
           workflow_conclusion: completed
-          name: dist
+          name: dist-20.x
           path: ./
 
       - name: ⚙️ Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v4
 
       - name: 📤 Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: github-pages
           path: ./artifact.tar
 
       - name: 🚀 Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
