--- a/app/Drupal/nts_theme/package.json
+++ b/app/Drupal/nts_theme/package.json
@@ -47,7 +47,7 @@
     "webpack-cli": "^5.1.4",
     "webpack-remove-empty-scripts": "^1.0.4"
   },
-  "packageManager": "pnpm@8.14.1+",
+  "packageManager": "pnpm@8.15.1",
   "engines": {
     "pnpm": ">=8",
     "node": ">=18"
