--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "vitepress-plugin-tabs": "^0.5.0",
     "vue": "^3.4.15"
   },
-  "packageManager": "pnpm@8.14.3+",
+  "packageManager": "pnpm@8.15.1",
   "engines": {
     "pnpm": ">=8",
     "node": ">=18"
