--- a/config/sync/block.block.nts_theme_messages.yml
+++ b/config/sync/block.block.nts_theme_messages.yml
@@ -10,7 +10,7 @@ _core:
   default_config_hash: WvPhI8OwllG0gE69-F8qL3ai3nd5SbYD6JpmEuZcyok
 id: nts_theme_messages
 theme: nts_theme
-region: highlighted
+region: messages
 weight: 0
 provider: null
 plugin: system_messages_block
