--- a/app/Drupal/nts_theme/package.json
+++ b/app/Drupal/nts_theme/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://maks-oleksyuk.github.io/notes",
-  "license": "WTFPL",
+  "license": "GPL-3.0-or-later",
   "author": {
     "name": "Maks Oleksyuk",
     "url": "https://github.com/maks-oleksyuk"
