--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "php": ">=8.3",
         "composer/installers": "^2.2",
-        "drupal-notes/nts_theme": "^1.0@dev",
+        "drupal-notes/nts_core": "@dev",
+        "drupal-notes/nts_theme": "@dev",
         "drupal/admin_toolbar": "^3.4",
         "drupal/core-composer-scaffold": "^10.2",
         "drupal/core-recommended": "^10.2",
