--- a/app/Drupal/nts_theme/composer.json
+++ b/app/Drupal/nts_theme/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "drupal-notes/nts_theme",
-    "type": "drupal-custom-theme",
-    "version": "1.0.0-dev"
+    "description": "Custom theme for Notes site",
+    "license": "GPL-3.0-or-later",
+    "type": "drupal-custom-theme"
 }
