update composer files and some dependencies

--- a/app/Drupal/nts_core/composer.json
+++ b/app/Drupal/nts_core/composer.json
@@ -2,5 +2,6 @@
     "name": "drupal-notes/nts_core",
     "description": "Custom main module for Notes site",
     "license": "GPL-3.0-or-later",
-    "type": "drupal-custom-module"
+    "type": "drupal-custom-module",
+    "version": "1.0.0"
 }
