--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,4 @@
 # Linguist overrides
-*.md linguist-detectable=true
-*.md linguist-documentation=false
-README.md  linguist-detectable=false
-LICENSE.md linguist-detectable=false
+*.md linguist-detectable -linguist-documentation
+README.md  -linguist-detectable
+LICENSE.md -linguist-detectable
