--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   },
   "devDependencies": {
     "prettier": "^3.2.5",
-    "vitepress": "1.0.2",
+    "vitepress": "1.0.1",
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-google-analytics": "^1.0.2",
     "vitepress-plugin-tabs": "^0.5.0",
+    "vitepress-sidebar": "^1.21.0",
     "vue": "^3.4.21"
   },
-  "packageManager": "pnpm@8.15.4",
+  "packageManager": "pnpm@8.15.5",
   "engines": {
     "pnpm": ">=8",
     "node": ">=20"
