--- a/app/Drupal/nts_core/composer.json
+++ b/app/Drupal/nts_core/composer.json
@@ -3,5 +3,5 @@
     "description": "Custom main module for Notes site",
     "license": "GPL-3.0-or-later",
     "type": "drupal-custom-module",
-    "version": "1.0.0"
+    "version": "1.0-dev"
 }
