--- a/config/sync/gin.settings.yml
+++ b/config/sync/gin.settings.yml
@@ -13,7 +13,7 @@ third_party_settings:
 preset_accent_color: green
 preset_focus_color: gin
 enable_darkmode: '1'
-classic_toolbar: new
+classic_toolbar: horizontal
 secondary_toolbar_frontend: true
 high_contrast_mode: false
 accent_color: ''
